@@ -16,6 +16,12 @@ extern "C" {
    */
   void hexdump(FILE* fp, const char* data, size_t size);
 
+  /**
+   * Dump the content of data as hexadecimal (and its ascii repr.) into a string.
+   * Memory should be freed with free.
+   */
+  char* hexdump_str(const char* data, size_t size);
+
 #ifdef __cplusplus
 }
 #endif
